--- a/src/Squawkings/Views/Shared/_footer.cshtml
+++ b/src/Squawkings/Views/Shared/_footer.cshtml
@@ -1,11 +1,11 @@
 ﻿@model Squawkings.Models.FooterView
 <div id="footer-banner">
 	<div>
-		<span class="footer-label">Total Squawks</span>
-		<span class="footer-data">: @Model.TotalSquawks</span>
+		<span class="footer-label">Total Squawks:</span>
+		<span class="footer-data">@Model.TotalSquawks</span>
 	</div>
 	<div>
-		<span class="footer-label">Total Users</span> 
-		<span class="footer-data">: @Model.TotalUsers</span>
+		<span class="footer-label">Total Users:</span> 
+		<span class="footer-data">@Model.TotalUsers</span>
 	</div>
 </div>
