--- a/src/Squawkings/Views/Shared/_menu.cshtml
+++ b/src/Squawkings/Views/Shared/_menu.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Squawkings.Controllers.MenuViewModel
-<div id="logon-banner">
+<div id="menu-banner">
     <div  class="container">
         <ul>
             @if (User.Identity.IsAuthenticated)
